Fixed issue with scrollbars + pre text + wrapping it
Two issues:
a) Pre Text doesn't wrap: For code, thats kinda what you want. But for other text, not wrapping is a royal pain. So, risking it for now
b) When it wasn't wrapped, the scrollbar occluded the text, so adding a bottom padding on "pre" elements to allow room for the scrollbar.

--- a/App/css/viewer.css
+++ b/App/css/viewer.css
@@ -45,6 +45,8 @@ img {
 */
 pre {
     overflow-x: auto;
+    padding-bottom: 16px;
+    white-space: pre-wrap;
 }
 
 p {
